force-app/main/default/objects/Lead/fields/FinServ__ReferrerScore__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ReferrerScore__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Referrer score from internal/external referrer</description>
    <formula>IF(NOT(ISBLANK(FinServ__ReferredByUser__c)),FinServ__ReferredByUser__r.FinServ__ReferrerScore__c,IF(NOT(ISBLANK(FinServ__ReferredByContact__c)),FinServ__ReferredByContact__r.FinServ__ReferrerScore__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>