force-app/main/default/objects/Lead/fields/FinServ__RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RelatedAccount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This includes Organisation, Individual, CLG, Prospect Customers.</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Leads</relationshipLabel>
    <relationshipName>RelatedLeads</relationshipName>
    <type>Lookup</type>
</CustomField>