force-app/main/default/objects/Lead/fields/Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Next followup date</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>