force-app/main/default/objects/Lead/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <complianceGroup>Source_Salesforce;Privacy_Personal_Information;Integrity_Accurate</complianceGroup>
    <description>Home Phone Number</description>
    <inlineHelpText>Home Phone number needs to be in the format of +61 followed by 9 digits. Eg. +61312345678</inlineHelpText>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>