force-app/main/default/objects/Lead/fields/Individual_Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Individual_Customer_Profile__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the field to show any individual profiles that are linked to the customer profile (i.e. Org or CLG profiles) in Lead</description>
    <label>Individual Customer Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PersonAccount</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Individual Customer Profile)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>