force-app/main/default/objects/Lead/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Industry value Lookup field.</description>
    <label>ANZSIC Code</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>