force-app/main/default/objects/Lead/fields/Is_BOH_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_BOH_Lead__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>To identify if the lead is BOH lead or not?</description>
    <label>Is BOH Lead</label>
    <type>Checkbox</type>
</CustomField>