force-app/main/default/objects/Lead/fields/Is_Valid_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_Address__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>set to true if a valid address is selected</description>
    <label>Is Valid Address?</label>
    <type>Checkbox</type>
</CustomField>