force-app/main/default/objects/Lead/fields/IsNewLead__c.field-meta.xml
<CustomField>
    <fullName>IsNewLead__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>This field was introduced due to an implicit update during lead creation, causing inadvertent update trigger operations to execute as per Knowledge Article 000384239</description>
    <label>Is New Lead</label>
    <type>Checkbox</type>
</CustomField>