force-app/main/default/objects/Lead/fields/Lead_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Auto_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Auto Number for Leads</description>
    <displayFormat>{00000000}</displayFormat>
    <label>Lead Auto Number</label>
    <type>AutoNumber</type>
</CustomField>