force-app/main/default/objects/Lead/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Return Lead.CreatedDate if Lead is created from scratch.
Return Lead.Referral_Acknowledged_Date__c if lead is converted from Referral (FinServ__ReferredByUser__c != null).</description>
    <formula>If(FinServ__ReferredByUser__c != Null, Referral_Acknowledged_Date__c , CreatedDate )</formula>
    <label>Lead Created Date</label>
    <type>DateTime</type>
</CustomField>