force-app/main/default/objects/Lead/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Retains value from Lead_Auto_Number__C field for backup and Restoration purpose.</description>
    <externalId>true</externalId>
    <label>Lead Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>