force-app/main/default/objects/Lead/fields/Lead_Originator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Originator__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lead originating system name</description>
    <label>Lead Originator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>CCRM</fullName>
                <default>true</default>
                <label>CCRM</label>
            </value>
            <value>
                <fullName>UNICA</fullName>
            </value>
            <value>
                <fullName>MLCRM</fullName>
            </value>
            <value>
                <fullName>Lender Engage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>