force-app/main/default/objects/Lead/fields/Lead_Owner_Link__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Link__c</fullName>
    <description>Lead Owner Link</description>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <formula>HYPERLINK(&quot;/lightning/r/User/&quot;+  OwnerId +&quot;/view/&quot;,Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner</label>
    <type>Text</type>
</CustomField>