force-app/main/default/objects/Lead/fields/Lead_Owner_Teamcode__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Teamcode__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Lead Owner TeamCode</description>
    <formula>Owner:User.Team_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Teamcode</label>
    <type>Text</type>
</CustomField>