force-app/main/default/objects/Lead/fields/Lead_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>To display the Lead name on compact layout</description>
    <formula>TEXT( LeadSource ) + &apos; - &apos; + TEXT( OpportunityType__c )</formula>
    <label>Lead Record Name</label>
    <type>Text</type>
</CustomField>