force-app/main/default/objects/Lead/fields/Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent__c</fullName>
    <complianceGroup>Source_Qualtrics;Integrity_Accurate;Privacy_Non_Personal_Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Captures the Marketing Consent</description>
    <label>Marketing Consent</label>
    <type>Checkbox</type>
</CustomField>