force-app/main/default/objects/Lead/fields/ML_DataMigration_Key__c.field-meta.xml
<CustomField>
    <fullName>ML_DataMigration_Key__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>external ID to support data loading of ML franchisee data</description>
    <externalId>true</externalId>
    <label>ML Data migration Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>