force-app/main/default/objects/Lead/fields/My_Managers_Lead__c.field-meta.xml
<CustomField>
    <fullName>My_Managers_Lead__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>My Manager&apos;s Lead</description>
    <formula>Owner:User.Id = $User.ManagerId</formula>
    <label>My Managers Lead</label>
    <type>Checkbox</type>
</CustomField>