force-app/main/default/objects/Lead/fields/My_Managers_Referral__c.field-meta.xml
<CustomField>
    <fullName>My_Managers_Referral__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>My Manager&apos;s Referral based on the Referrer (FinServ__ReferredByUser__c) instead of Owner</description>
    <formula>FinServ__ReferredByUser__c = $User.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Managers Referral</label>
    <type>Checkbox</type>
</CustomField>