force-app/main/default/objects/Lead/fields/My_Referrals__c.field-meta.xml
<CustomField>
    <fullName>My_Referrals__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>My referral leads</description>
    <formula>FinServ__ReferredByUser__c == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Referrals</label>
    <type>Checkbox</type>
</CustomField>