force-app/main/default/objects/Lead/fields/My_Reportees_Lead__c.field-meta.xml
<CustomField>
    <fullName>My_Reportees_Lead__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>My reportees data</description>
    <formula>Owner:User.ManagerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Reportees Lead</label>
    <type>Checkbox</type>
</CustomField>