force-app/main/default/objects/Lead/fields/My_Team__c.field-meta.xml
<CustomField>
    <fullName>My_Team__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>My Team</description>
    <formula>$User.Team_Code__c  =  Owner:User.Team_Code__c &amp;&amp; NOT(ISNULL(Owner:User.Team_Code__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team</label>
    <type>Checkbox</type>
</CustomField>