force-app/main/default/objects/Lead/fields/My_Team_Segment__c.field-meta.xml
<CustomField>
    <fullName>My_Team_Segment__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>My Team Segment</description>
    <formula>IF(
        $UserRole.DeveloperName = &apos;SME_NBC_Senior_Manager&apos;, 
        My_Region_Flag__c,
        IF
        (
        OR
        (
        $UserRole.DeveloperName = &apos;SME_Head_of_NBC&apos;,
        $UserRole.DeveloperName = &apos;SME_General_Manager&apos;
        ),
        true, 
        IF(
        OR(
         ISPICKVAL($User.Commercial_Segment__c, &apos;AF&apos;), 
          ISPICKVAL($User.Commercial_Segment__c, &apos;SME NBC&apos;),
           ISPICKVAL($User.Commercial_Segment__c, &apos;PB&apos;)
         ),
        My_Sub_Team__c ,
        My_Region_Flag__c 
        )
        )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team Segment</label>
    <type>Checkbox</type>
</CustomField>