force-app/main/default/objects/Lead/fields/My_teams_referrer__c.field-meta.xml
<CustomField>
    <fullName>My_teams_referrer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Does the commercial segment and area code or team code matches the running user?
Used in My Teams Referrals Report</description>
    <formula>AND(
				RecordType.DeveloperName = &apos;Referral&apos;, 
				TEXT(Owner:User.Commercial_Segment__c) = TEXT($User.Commercial_Segment__c),
				OR(
								$User.Area_Code__c == Owner:User.Area_Code__c,
								$User.Team_Code__c = Owner:User.Team_Code__c
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My team&apos;s referrer?</label>
    <type>Checkbox</type>
</CustomField>