force-app/main/default/objects/Lead/fields/Not_Registered__c.field-meta.xml
<CustomField>
    <fullName>Not_Registered__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Select if company has not yet been registered</description>
    <inlineHelpText>Entity not yet registered for ABN/ACN</inlineHelpText>
    <label>Not Registered</label>
    <type>Checkbox</type>
</CustomField>