force-app/main/default/objects/Lead/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non-Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Additional Notes of a Lead record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>