force-app/main/default/objects/Lead/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Qualtrics;Source_Salesforce</complianceGroup>
    <description>Picklist for capturing opportunity type.</description>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Lending</fullName>
            </value>
            <value>
                <fullName>Transact &amp; Save</fullName>
            </value>
            <value>
                <fullName>Financial Well Being</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>