force-app/main/default/objects/Lead/fields/Other_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Source_Detail__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The field is used to capture other source detail in case of lead source as events or other</description>
    <label>Other Source Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>