force-app/main/default/objects/Lead/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lead Owner Region</description>
    <formula>Owner:User.Area_Code__c</formula>
    <label>Owner Region/Area Code</label>
    <type>Text</type>
</CustomField>