force-app/main/default/objects/Lead/fields/Owner_Team_POD__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team_POD__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lead Owner POD</description>
    <formula>Owner:User.Sub_Team_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Team/POD</label>
    <type>Text</type>
</CustomField>