force-app/main/default/objects/Lead/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Qualtrics;Source_Salesforce</complianceGroup>
    <description>To capture the postal code of BOH Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PostalCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>