force-app/main/default/objects/Lead/fields/PreferredName__c.field-meta.xml
<CustomField>
    <fullName>PreferredName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field is used to store the preferred name of the lead</description>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>