force-app/main/default/objects/Lead/fields/Previous_Lead__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lead__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>self lookup to store previous lead id from Adobe incase of redelivery</description>
    <label>Previous Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Related Leads</relationshipLabel>
    <relationshipName>RelatedLeads</relationshipName>
    <type>Lookup</type>
</CustomField>