force-app/main/default/objects/Lead/fields/Primary_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Method__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>It is used to display contact method.</description>
    <label>Primary Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>