force-app/main/default/objects/Lead/fields/Primary_Franchise_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Franchise_Owner__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This field holds the detail related to franchise to which lead belongs</description>
    <label>Primary Franchise Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>