force-app/main/default/objects/Lead/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <defaultValue>IF($RecordType.DeveloperName == &quot;ML_CRM&quot;,VALUE($Label.ML_LeadDefaultPriorityValue),VALUE($Label.CCRM_LeadDefaultPriorityValue))</defaultValue>
    <description>Priority of Lead</description>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>