force-app/main/default/objects/Lead/fields/Privacy_Consent__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Consent__c</fullName>
    <complianceGroup>Source_Qualtrics;Integrity_Accurate;Privacy_Non_Personal_Information</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>Captures the Privacy Consent</description>
    <label>Privacy Consent</label>
    <type>Checkbox</type>
</CustomField>