force-app/main/default/objects/Lead/fields/Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>Prospect_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>UNICA Prospect ID</description>
    <label>Prospect ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>