force-app/main/default/objects/Lead/fields/Pub_Sub_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Pub_Sub_Event_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Pub Sub Queue</complianceGroup>
    <description>Unique External Id To replay the pub sub events</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Pub Sub Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>