force-app/main/default/objects/Lead/fields/qualtrics__Last_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__Last_Survey_Response__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Survey Response</label>
    <type>Date</type>
</CustomField>