force-app/main/default/objects/Lead/fields/Referral_Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Acknowledged_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The date when referrals are acknowledged  by bankers</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>