force-app/main/default/objects/Lead/fields/Referral_Category__c.field-meta.xml
<CustomField>
    <fullName>Referral_Category__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Categories the source of the referral</description>
    <label>Referral Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-Z Review</fullName>
            </value>
            <value>
                <fullName>Affluent</fullName>
            </value>
            <value>
                <fullName>Borrow - Mortgage</fullName>
            </value>
            <value>
                <fullName>Borrow - Other</fullName>
            </value>
            <value>
                <fullName>Home Loan Check-In</fullName>
            </value>
            <value>
                <fullName>Moving Overseas</fullName>
            </value>
            <value>
                <fullName>Corporate Banking</fullName>
            </value>
            <value>
                <fullName>Commercial Cards-BB, RBB &amp; PB</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Esanda</fullName>
            </value>
            <value>
                <fullName>Regional Business Banking</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>